# tinytopics

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml  zensical.toml
.github/workflows/: ci-tests.yml  mkdocs.yml  mypy.yml
articles/: get-started.qmd
articles/benchmark/: index.html
articles/distributed/: index.html
articles/get-started/: index.html
articles/memory/: index.html
articles/static/example-text/: L_fastTopics.safetensors
articles/text/: index.html
changelog/: index.html
docs/: changelog.md  index.md
docs/articles/: benchmark.md  benchmark.qmd  distributed.md  distributed.qmd  get-started.md  get-started.qmd
docs/articles/outputs/: benchmark-results.csv
docs/articles/static/example-text/: F_fastTopics.rds  F_fastTopics.safetensors  L_fastTopics.rds
docs/reference/: colors.md  data.md  fit.md  loss.md  models.md  plot.md  utils.md
docs/scripts/: purl.sh  sync.sh
docs/stylesheets/: extra.css
examples/: benchmark.py  distributed.py  distributed_data.py  get-started.py  simulate.py
reference/colors/: index.html
reference/data/: index.html
reference/fit/: index.html
reference/loss/: index.html
reference/models/: index.html
reference/plot/: index.html
reference/utils/: index.html
search/: search_index.json
src/tinytopics/: __init__.py  colors.py  data.py  fit.py  fit_distributed.py  models.py  plot.py  utils.py
tests/: test_data.py  test_fit_disk.py  test_fit_distributed.py  test_models.py  test_utils.py
tinytopics/: __init__.py  fit.py  models.py  plot.py  utils.py
