[project]
name = "tinytopics"
version = "0.9.1"
description = "Topic modeling via sum-to-one constrained neural Poisson non-negative matrix factorization"
authors = [{ name = "Nan Xiao", email = "me@nanx.me" }]

dependencies = [
    "torch >= 2.3.0; python_version < '3.13'",
    "torch >= 2.6.0; python_version >= '3.13'",
    "torch >= 2.9.0; python_version >= '3.14'",
    "accelerate>=1.2.1",
    "numpy>=2.0.0",
    "scipy>=1.13.0",
    "matplotlib>=3.8.4",
    "scikit-image>=0.22.0",
    "tqdm>=4.65.0",
]

readme = "README.md"

classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",

    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",

    "License :: OSI Approved :: MIT License",

    "Operating System :: OS Independent",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",

    "Typing :: Typed",
]

requires-python = ">= 3.10"

[project.urls]
Homepage = "https://nanx.me/tinytopics/"
Documentation = "https://nanx.me/tinytopics/"
Repository = "https://github.com/nanxstats/tinytopics"
Issues = "https://github.com/nanxstats/tinytopics/issues"
Changelog = "https://github.com/nanxstats/tinytopics/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "jupyter>=1.1.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings-python>=2.0.1",
    "mypy>=1.19.1",
    "nbconvert>=7.16.6",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.251219",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "safetensors>=0.7.0",
    "scipy-stubs>=1.15.3.0",
    "types-tqdm>=4.67.0.20250809",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.lint.per-file-ignores]
"examples/memory.py" = ["E402"]
